--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 cairo-rs = { version = "0.20", features = ["png"] }
 anyhow = "1.0"
+jiff = { version = "0.2", features = ["std"] }
 sysinfo = "0.37"
-humantime = "2"
 
 [[bin]]
 name = "crypto-usage-analyzer"
